Fix minor issues and resolve logging flow errors causing some logs not to work properly
